// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly when not selected 1`] = `
<div
  class="sc-AxjAm cvbzfR"
  display="flex"
>
  <div
    class="sc-AxjAm iuFNwh"
    display="flex"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-coffee fa-w-20 sc-AxhCb eWDCUd"
      color="textRegular"
      data-icon="coffee"
      data-prefix="fas"
      data-testid="icon"
      focusable="false"
      height="22"
      role="img"
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        fill="currentColor"
      />
    </svg>
    <a
      class="sc-AxirZ fIyDrY"
      color="textRegular"
      data-testid="main-nav-text"
      font-family="Nunito Sans"
      font-size="7"
      font-weight="300"
      href="#"
      text-decoration="none"
    >
      navItem
    </a>
  </div>
</div>
`;

exports[`it renders correctly when selected 1`] = `
<div
  class="sc-AxjAm cvbzfR"
  display="flex"
>
  <div
    class="sc-AxjAm iuFNwh"
    display="flex"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-coffee fa-w-20 sc-AxhCb cjvlkc"
      color="mainNavSelectedText"
      data-icon="coffee"
      data-prefix="fas"
      data-testid="icon"
      focusable="false"
      height="22"
      role="img"
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        fill="currentColor"
      />
    </svg>
    <a
      class="sc-AxirZ chDuZw"
      color="mainNavSelectedText"
      data-testid="main-nav-text"
      font-family="Nunito Sans"
      font-size="7"
      font-weight="600"
      href="#"
      text-decoration="none"
    >
      navItem
    </a>
  </div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-right fa-w-10 sc-AxhCb cjvlkc"
    color="mainNavSelectedText"
    data-icon="chevron-right"
    data-prefix="fas"
    data-testid="icon"
    focusable="false"
    height="22"
    role="img"
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
      fill="currentColor"
    />
  </svg>
</div>
`;
